Answered Assessment and Minor Changes

--- a/Lecture 2/1_PARTS_OF_SPEECH.ipynb
+++ b/Lecture 2/1_PARTS_OF_SPEECH.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# Create a simple Doc object\n",
-    "doc = nlp(u\"The quick brown fox jumped over the lazy dog's back.\")"
+    "doc = nlp(u\"It's comforting to know that even A.I. struggles with finding the right career path.\")"
    ]
   },
   {
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The quick brown fox jumped over the lazy dog's back.\n"
+      "It's comforting to know that even A.I. struggles with finding the right career path.\n"
      ]
     }
    ],
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jumped VERB VBD verb, past tense\n"
+      "know VERB VB verb, base form\n"
      ]
     }
    ],
@@ -89,24 +89,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The        DET      DT     determiner\n",
-      "quick      ADJ      JJ     adjective\n",
-      "brown      ADJ      JJ     adjective\n",
-      "fox        NOUN     NN     noun, singular or mass\n",
-      "jumped     VERB     VBD    verb, past tense\n",
-      "over       ADP      IN     conjunction, subordinating or preposition\n",
+      "It         PRON     PRP    pronoun, personal\n",
+      "'s         AUX      VBZ    verb, 3rd person singular present\n",
+      "comforting VERB     VBG    verb, gerund or present participle\n",
+      "to         PART     TO     infinitival \"to\"\n",
+      "know       VERB     VB     verb, base form\n",
+      "that       SCONJ    IN     conjunction, subordinating or preposition\n",
+      "even       ADV      RB     adverb\n",
+      "A.I.       PROPN    NNP    noun, proper singular\n",
+      "struggles  VERB     VBZ    verb, 3rd person singular present\n",
+      "with       ADP      IN     conjunction, subordinating or preposition\n",
+      "finding    VERB     VBG    verb, gerund or present participle\n",
       "the        DET      DT     determiner\n",
-      "lazy       ADJ      JJ     adjective\n",
-      "dog        NOUN     NN     noun, singular or mass\n",
-      "'s         PART     POS    possessive ending\n",
-      "back       NOUN     NN     noun, singular or mass\n",
+      "right      ADJ      JJ     adjective (English), other noun-modifier (Chinese)\n",
+      "career     NOUN     NN     noun, singular or mass\n",
+      "path       NOUN     NN     noun, singular or mass\n",
       ".          PUNCT    .      punctuation mark, sentence closer\n"
      ]
     }
@@ -514,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
