--- a/Lecture 1/1-Spacy-Basics.ipynb
+++ b/Lecture 1/1-Spacy-Basics.ipynb
@@ -58,17 +58,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tesla PROPN nsubj\n",
-      "is VERB aux\n",
-      "looking VERB ROOT\n",
-      "at ADP prep\n",
-      "buying VERB pcomp\n",
-      "U.S. PROPN compound\n",
-      "startup NOUN dobj\n",
-      "for ADP prep\n",
-      "$ SYM quantmod\n",
-      "6 NUM compound\n",
-      "million NUM pobj\n"
+      "It PRON nsubj\n",
+      "'s AUX ROOT\n",
+      "comforting VERB acomp\n",
+      "to PART aux\n",
+      "know VERB xcomp\n",
+      "that SCONJ mark\n",
+      "even ADV advmod\n",
+      "A.I. PROPN nsubj\n",
+      "struggles VERB ccomp\n",
+      "with ADP prep\n",
+      "finding VERB pcomp\n",
+      "the DET det\n",
+      "right ADJ amod\n",
+      "career NOUN compound\n",
+      "path NOUN dobj\n",
+      ". PUNCT punct\n"
      ]
     }
    ],
@@ -78,7 +83,8 @@
     "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "# Create a Doc object\n",
-    "doc = nlp(u'Tesla is looking at buying U.S. startup for $6 million')\n",
+    "#doc = nlp(u'Tesla is looking at buying U.S. startup for $6 million')\n",
+    "doc = nlp(u\"It's comforting to know that even A.I. struggles with finding the right career path.\")\n",
     "\n",
     "# Print each token separately\n",
     "for token in doc:\n",
@@ -131,18 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.Tagger at 0x237cb1e8f98>),\n",
-       " ('parser', <spacy.pipeline.DependencyParser at 0x237cb2852b0>),\n",
-       " ('ner', <spacy.pipeline.EntityRecognizer at 0x237cb285360>)]"
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x1dab812d7f0>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x1dab812e270>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x1dab8341850>),\n",
+       " ('attribute_ruler',\n",
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x1dabe34fd10>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x1dab8287050>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x1daba0d33e0>)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['tagger', 'parser', 'ner']"
+       "['tok2vec', 'tagger', 'parser', 'attribute_ruler', 'lemmatizer', 'ner']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +212,7 @@
     }
    ],
    "source": [
-    "doc2 = nlp(u\"Tesla isn't   looking into startups anymore.\")\n",
+    "doc2 = nlp(u\"Tesla isn't  looking into startups anymore.\")\n",
     "\n",
     "for token in doc2:\n",
     "    print(token.text, token.pos_, token.dep_)"
@@ -369,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +388,7 @@
        "'nominal subject'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,16 +588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is the first sentence.\n",
-      "This is another sentence.\n",
-      "This is the last sentence.\n"
+      "As a doctor.\n",
+      "I can see the limitations.\n",
+      "But they are improving super fast especially in radiology.\n"
      ]
     }
    ],
@@ -633,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
