--- a/Lecture 1/7-NLP-Basics-Assessment.ipynb
+++ b/Lecture 1/7-NLP-Basics-Assessment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Enter your code here:\n",
-    "\n"
+    "with open('../TextFiles/owlcreek.txt') as f:\n",
+    "    text = f.read()\n",
+    "    doc = nlp(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -55,13 +57,13 @@
        "\n",
        "by Ambrose Bierce\n",
        "\n",
-       "I\n",
+       "I.\n",
        "\n",
        "A man stood upon a railroad bridge in northern Alabama, looking down\n",
        "into the swift water twenty feet below.  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,21 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4833"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of tokens in the document: 4835\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "print(\"Number of tokens in the document:\", len(doc))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,46 +107,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "211"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**4. Print the second sentence in the document**<br> HINT: Indexing starts at zero, and the title counts as the first sentence."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A man stood upon a railroad bridge in northern Alabama, looking down\n",
+      "Number of sentences in the document: 205\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences = list(doc.sents)\n",
+    "print(\"Number of sentences in the document:\", len(sentences))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*4*. Print the second sentence in the document**<br> HINT: Indexing starts at zero, and the title counts as the first sentence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The second sentence in the document is: A man stood upon a railroad bridge in northern Alabama, looking down\n",
       "into the swift water twenty feet below.  \n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "second_sentence = sentences[1].text\n",
+    "print(\"The second sentence in the document is:\", second_sentence)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,28 +159,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TEXT            POS        DEP        LEMMA          \n",
       "A DET det a\n",
       "man NOUN nsubj man\n",
       "stood VERB ROOT stand\n",
-      "upon ADP prep upon\n",
+      "upon SCONJ prep upon\n",
       "a DET det a\n",
       "railroad NOUN compound railroad\n",
       "bridge NOUN pobj bridge\n",
       "in ADP prep in\n",
       "northern ADJ amod northern\n",
-      "Alabama PROPN pobj alabama\n",
+      "Alabama PROPN pobj Alabama\n",
       ", PUNCT punct ,\n",
       "looking VERB advcl look\n",
-      "down PART prt down\n",
+      "down ADV advmod down\n",
       "\n",
-      " SPACE  \n",
+      " SPACE dep \n",
       "\n",
       "into ADP prep into\n",
       "the DET det the\n",
@@ -188,55 +191,62 @@
       "feet NOUN npadvmod foot\n",
       "below ADV advmod below\n",
       ". PUNCT punct .\n",
-      "  SPACE   \n"
+      "  SPACE dep  \n"
      ]
     }
    ],
    "source": [
     "# NORMAL SOLUTION:\n",
-    "\n"
+    "sentence = sentences[1]\n",
+    "print(f\"{'TEXT':{15}} {'POS':{10}} {'DEP':{10}} {'LEMMA':{15}}\")\n",
+    "for token in sentence:\n",
+    "    print(token.text, token.pos_, token.dep_, token.lemma_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A               DET   det        a              \n",
-      "man             NOUN  nsubj      man            \n",
-      "stood           VERB  ROOT       stand          \n",
-      "upon            ADP   prep       upon           \n",
-      "a               DET   det        a              \n",
-      "railroad        NOUN  compound   railroad       \n",
-      "bridge          NOUN  pobj       bridge         \n",
-      "in              ADP   prep       in             \n",
-      "northern        ADJ   amod       northern       \n",
-      "Alabama         PROPN pobj       alabama        \n",
-      ",               PUNCT punct      ,              \n",
-      "looking         VERB  advcl      look           \n",
-      "down            PART  prt        down           \n",
+      "TEXT            POS        DEP        LEMMA          \n",
+      "A               DET        det        a              \n",
+      "man             NOUN       nsubj      man            \n",
+      "stood           VERB       ROOT       stand          \n",
+      "upon            SCONJ      prep       upon           \n",
+      "a               DET        det        a              \n",
+      "railroad        NOUN       compound   railroad       \n",
+      "bridge          NOUN       pobj       bridge         \n",
+      "in              ADP        prep       in             \n",
+      "northern        ADJ        amod       northern       \n",
+      "Alabama         PROPN      pobj       Alabama        \n",
+      ",               PUNCT      punct      ,              \n",
+      "looking         VERB       advcl      look           \n",
+      "down            ADV        advmod     down           \n",
       "\n",
-      "               SPACE            \n",
+      "               SPACE      dep        \n",
       "              \n",
-      "into            ADP   prep       into           \n",
-      "the             DET   det        the            \n",
-      "swift           ADJ   amod       swift          \n",
-      "water           NOUN  pobj       water          \n",
-      "twenty          NUM   nummod     twenty         \n",
-      "feet            NOUN  npadvmod   foot           \n",
-      "below           ADV   advmod     below          \n",
-      ".               PUNCT punct      .              \n",
-      "                SPACE                           \n"
+      "into            ADP        prep       into           \n",
+      "the             DET        det        the            \n",
+      "swift           ADJ        amod       swift          \n",
+      "water           NOUN       pobj       water          \n",
+      "twenty          NUM        nummod     twenty         \n",
+      "feet            NOUN       npadvmod   foot           \n",
+      "below           ADV        advmod     below          \n",
+      ".               PUNCT      punct      .              \n",
+      "                SPACE      dep                       \n"
      ]
     }
    ],
    "source": [
     "# CHALLENGE SOLUTION:\n",
-    "\n"
+    "sentence = sentences[1]\n",
+    "print(f\"{'TEXT':{15}} {'POS':{10}} {'DEP':{10}} {'LEMMA':{15}}\")\n",
+    "for token in sentence:\n",
+    "    print(f\"{token.text:{15}} {token.pos_:{10}} {token.dep_:{10}} {token.lemma_:{15}}\")"
    ]
   },
   {
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,33 +271,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a pattern and add it to matcher:\n",
+    "pattern = [\n",
+    "    {\"LOWER\": \"swimming\"},  # Token's text matches 'swimming' in lowercase\n",
+    "    {\"IS_SPACE\": True, \"OP\": \"?\"},  # Optional token that is a space\n",
+    "    {\"LOWER\": \"vigorously\"}  # Token's text matches 'vigorously' in lowercase\n",
+    "]\n",
     "\n",
-    "\n",
-    "\n"
+    "matcher.add(\"Swimming\", [pattern])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(12881893835109366681, 1274, 1277), (12881893835109366681, 3607, 3610)]\n"
+      "List of found matches: [(12881893835109366681, 1274, 1277), (12881893835109366681, 3609, 3612)]\n"
      ]
     }
    ],
    "source": [
-    "# Create a list of matches called \"found_matches\" and print the list:\n",
-    "\n",
-    "\n"
+    "matches = matcher(doc)\n",
+    "print(\"List of found matches:\", matches)"
    ]
   },
   {
@@ -299,35 +312,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "By diving I could evade the bullets and, swimming\n",
-      "vigorously, reach the bank, take to the woods and get away home\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "over his shoulder; he was now swimming\n",
+      "Surrounding text for match: evade the bullets and, swimming\n",
+      "vigorously, reach the bank,\n",
+      "Surrounding text for match: shoulder; he was now swimming\n",
       "vigorously with the current.  \n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for match_id, start, end in matches:\n",
+    "    matched_span = doc[start:end]\n",
+    "\n",
+    "    start_context = max(start - 5, 0)  \n",
+    "    end_context = min(end + 5, len(doc))  \n",
+    "    surrounding_text = doc[start_context:end_context].text\n",
+    "    \n",
+    "    print(\"Surrounding text for match:\", surrounding_text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,42 +346,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "By diving I could evade the bullets and, swimming\n",
-      "vigorously, reach the bank, take to the woods and get away home.  \n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The hunted man saw all this over his shoulder; he was now swimming\n",
+      "The sentence containing the match: By diving I could evade the bullets and, swimming\n",
+      "vigorously, reach the bank, take to the woods and get away home.  \n",
+      "The sentence containing the match: The hunted man saw all this over his shoulder; he was now swimming\n",
       "vigorously with the current.  \n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n"
+    "for match_id, start, end in matches:\n",
+    "    matched_span = doc[start:end]\n",
+    "    \n",
+    "    sentence = matched_span.sent\n",
+    "    print(\"The sentence containing the match:\", sentence.text)"
    ]
   }
  ],
@@ -393,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
